<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroduceOnboard">

    <TextView
        android:id="@+id/yoram2"
        android:layout_width="149dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        android:layout_marginTop="79dp"
        android:lineSpacingExtra="-6sp"
        android:text="@string/title"
        android:textAppearance="@style/yoram"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <TextView

        android:id="@+id/introduce_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:text="@string/introduce_String1"
        android:textAppearance="@style/explain_text" />

    <TextView

        android:id="@+id/introduce_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/introduce_String2"
        android:textAppearance="@style/explain_text" />

    <TextView

        android:id="@+id/introduce_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/introduce_String3"
        android:textAppearance="@style/explain_text" />

    <android.widget.Button
        android:id="@+id/start_button"
        style="@style/BlackButtonStyle"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="150dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Button_title"
        android:textAppearance="@style/button_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/progress1" />

</LinearLayout>