<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YogaChoiceOnboadActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/yoram2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="79dp"
        android:text="@string/title"
        android:textAppearance="@style/yoram"
        android:lineSpacingExtra="-6sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        />

    <TextView

        android:id="@+id/choice_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/choice_String1"
        android:textAppearance="@style/explain_text"
        android:layout_gravity="left"
        />
    <TextView

        android:id="@+id/introduce_expalin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/choice_String2"
        android:textAppearance="@style/explain_text"
        android:layout_gravity="right"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = ""/>




</LinearLayout>